WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308364
[GStreamer] imported/w3c/web-platform-tests/webrtc/protocol/dtls-fingerprint-validation.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=308364
Summary
[GStreamer] imported/w3c/web-platform-tests/webrtc/protocol/dtls-fingerprint-...
Claudio Saavedra
Reported
2026-02-21 01:22:36 PST
Thread 1 (Thread 0x7fc60effd6c0 (LWP 2044137)): #0 0x00007fc93e4b3671 in g_logv () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #1 0x00007fc93e4b3923 in g_log () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #2 0x00007fc940d7b2ba in g_object_get () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #3 0x00007fc945ddfe22 in WebCore::GStreamerDataChannelHandler::bufferedAmountChanged() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007fc940d662fa in g_closure_invoke () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #5 0x00007fc940d9590c in ??? () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #6 0x00007fc940d86591 in ??? () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #7 0x00007fc940d867c1 in g_signal_emit_valist () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #8 0x00007fc940d86883 in g_signal_emit () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #9 0x00007fc940d722e4 in ??? () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #10 0x00007fc940d789ca in g_object_notify () at /lib/x86_64-linux-gnu/libgobject-2.0.so.0 #11 0x00007fc8681311fd in on_appsrc_data (pad=pad@entry=0x7fc6102d41f0, info=info@entry=0x7fc60effc520, user_data=0x7fc6102d3880) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gst-plugins-bad/ext/webrtc/webrtcdatachannel.c:1081 #12 0x00007fc93db93265 in probe_hook_marshal (hook=0x7fc6102c9750, data=0x7fc60effc410) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstpad.c:3709 #13 0x00007fc93e49cf27 in g_hook_list_marshal () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #14 0x00007fc93db929ac in do_probe_callbacks (pad=pad@entry=0x7fc6102d41f0, info=info@entry=0x7fc60effc520, defaultval=defaultval@entry=GST_FLOW_OK) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstpad.c:3893 #15 0x00007fc93db97bdc in gst_pad_push_data (pad=pad@entry=0x7fc6102d41f0, type=type@entry=4112, data=data@entry=0x7fc518001bd0) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstpad.c:4838 #16 0x00007fc93db9f67c in gst_pad_push (pad=pad@entry=0x7fc6102d41f0, buffer=0x7fc518001bd0) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstpad.c:4971 #17 0x00007fc93dcb9eb0 in gst_base_src_loop (pad=0x7fc6102d41f0) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:3090 #18 0x00007fc93dbd3f52 in gst_task_func (task=0x7fc6100041a0) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gsttask.c:399 #19 0x00007fc93e4e2422 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #20 0x00007fc93e4dce62 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #21 0x00007fc94208aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #22 0x00007fc942117c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-02-21 01:25:00 PST
This test fails but every once in a while it crashes with the above stacktrace. Here is an instance:
https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/307684@main%20(23416)/imported/w3c/web-platform-tests/webrtc/protocol/dtls-fingerprint-validation-crash-log.txt
STDERR: warning: could not find '.gnu_debugaltlink' file for /lib/x86_64-linux-gnu/libplds4.so STDERR: 0:02:41.907105460 2015906 0x5619f7f19780 ERROR webrtcbin gstwebrtcbin.c:8635:gst_webrtc_bin_set_property:<webkit-webrtcbin-51> Balanced bundle policy not implemented yet STDERR: 0:02:41.908348940 2015906 0x5619f7f19780 ERROR webrtcbin gstwebrtcbin.c:8635:gst_webrtc_bin_set_property:<webkit-webrtcbin-52> Balanced bundle policy not implemented yet STDERR: Promise result isn't PENDING or INTERRUPTED STDERR: Promise result isn't PENDING or INTERRUPTED STDERR: Promise result isn't PENDING or INTERRUPTED STDERR: g_object_get: assertion 'G_IS_OBJECT (object)' failed STDERR: WebKitWebProcess terminated (pid 2015906) for reason: crash
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2Fprotocol%2Fdtls-fingerprint-validation.html&platform=GTK&platform=WPE
Claudio Saavedra
Comment 2
2026-02-21 01:25:35 PST
After fixing this please mark it as failing again.
Claudio Saavedra
Comment 3
2026-02-21 01:27:56 PST
This one also seems to crash only in GTK.
Vitaly Dyackhov
Comment 4
2026-02-24 02:02:48 PST
It crashes on WPE too. For example here:
https://build.webkit.org/results/WPE-Linux-64-bit-Release-Tests/308097@main%20(25525)/results.html
Vitaly Dyackhov
Comment 5
2026-02-24 02:06:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59312
EWS
Comment 6
2026-02-24 02:09:16 PST
Test gardening commit
308111@main
(745d31880f18): <
https://commits.webkit.org/308111@main
> Reviewed commits have been landed. Closing PR #59312 and removing active labels.
Philippe Normand
Comment 7
2026-02-24 07:53:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59331
EWS
Comment 8
2026-02-27 05:43:03 PST
Committed
308333@main
(74e1228c432c): <
https://commits.webkit.org/308333@main
> Reviewed commits have been landed. Closing PR #59331 and removing active labels.
Radar WebKit Bug Importer
Comment 9
2026-02-27 05:44:11 PST
<
rdar://problem/171352084
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug