Cherry-pick 308333@main (74e1228c432c). https://bugs.webkit.org/show_bug.cgi?id=308364

[GStreamer] imported/w3c/web-platform-tests/webrtc/protocol/dtls-fingerprint-validation.html is a flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=308364

    Reviewed by Xabier Rodriguez-Calvar.

    Wrap the handler reference in a DataChannelNotifier structure, passed to the GstWebRTC DataChannel
    GObject signal handlers. The crash was most likely due to the handler being destructed shortly
    before the bufferedAmountChanged method call.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:
    (WebCore::DataChannelNotifier::DataChannelNotifier):
    (WebCore::DataChannelNotifier::destruct):
    (WebCore::GStreamerDataChannelHandler::GStreamerDataChannelHandler):
    (WebCore::GStreamerDataChannelHandler::bufferedAmountChanged):
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.h:

    Canonical link: https://commits.webkit.org/308333@main

Canonical link: https://commits.webkit.org/298234.436@webkitglib/2.50